k8s/00_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sentence
  labels:
    istio-injection: enabled # Auto deploy sidecar
