k8s/03_nouns-deployment.yaml
# This deployement will test the rule for prod targets
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nouns
  namespace: sentence
  labels:
    target: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nouns
  template:
    metadata:
      labels:
        app: nouns
        target: prod
    spec:
      containers:
        - name: nouns
          image: ghcr.io/remi-espie/sentences/nouns:latest
          ports:
            - containerPort: 8081
